master  >  Refactoring on charts data retrievement => move the retrieving into a service

--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/services/chartdataparser.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/dataretrieverservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
